SERVER-49101 Fix erroneous size check in Biggie's Node::_begin() function